ajustes menores para publicar

--- a/src/aboutBlog.html
+++ b/src/aboutBlog.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Te contamos quiénes somos y nuestra trayectoria profesional, desarrollamos software a la medida y damos asesoría en el análisis de tu proyecto, ¡somos tu mejor aliado!">
   <meta name="author" content="Devstar Novatech">
-  <link rel="shortcut icon" href="img/postImg/logoBlog.ico">
+  <link rel="shortcut icon" href="Img/postImg/logoBlog.ico">
 
   <title>Devstar Novatech Blog - Acerca de</title>
 
@@ -57,7 +57,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/postImg/supernova.jpg')">
+  <header class="masthead" style="background-image: url('Img/postImg/supernova.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
