--- a/src/blog.html
+++ b/src/blog.html
@@ -58,7 +58,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/fondoDNmovil_md.png')">
+  <header class="masthead" style="background-image: url('Img/fondoDNmovil_md.png')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
