--- a/src/contactBlog.html
+++ b/src/contactBlog.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Formulario de Contacto de Devstar Novatech Blog mándanos un mensaje y damos soluciones ágiles en temas de computación e informática">
   <meta name="author" content="Devstar Novatech">
-  <link rel="shortcut icon" href="img/postImg/logoBlog.ico">
+  <link rel="shortcut icon" href="Img/postImg/logoBlog.ico">
 
   <title>Devstar Novatech Blog - Contacto</title>
 
