--- a/src/index.html
+++ b/src/index.html
@@ -452,7 +452,7 @@
 				<div class="finalInfo finalInfo1st">					
 					<div class="row justify-content-center pt-2">
 						<div class="col-4 col-md-4 py-2 py-md-0 mt-lg-2 my-auto">
-							<img src="Img/logob.png" alt="logoBlanco" class="logoFinBlanco">
+							<img src="Img/logoB.png" alt="logoBlanco" class="logoFinBlanco">
 						</div>
 						<div class="col-7 col-md-8 mt-md-2 px-0 my-auto my-lg-0">
 							<h2 class="titulo4F pt-2">DEVSTAR NOVATECH</h2>
