--- a/src/blog.html
+++ b/src/blog.html
@@ -41,7 +41,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item togglerItem">
-            <a class="nav-link collapseJQ" href="blog.html">Inicio</a>
+            <a class="nav-link collapseJQ" href="Blog.html">Inicio</a>
           </li>
           <li class="nav-item togglerItem">
             <a class="nav-link collapseJQ" href="aboutBlog.html">Acerca de</a>
