--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
 	        <a class="nav-link barra collapseJQ" href="#contacto">Contacto</a>
 	      </li>
 	      <li class="nav-item togglerItem">
-	        <a class="nav-link barra collapseJQ" href="blog.html">Blog</a>
+	        <a class="nav-link barra collapseJQ" href="BlogERA.html">Blog</a>
 	      </li>
 	      <li class="nav-item dropdown togglerItem">
 	        <a class="nav-link dropdown-toggle barra" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -416,7 +416,7 @@
 					<h4 class="titulo4 text-uppercase">D&iacute;ganos sus necesidades y nosotros le proponemos una soluci&oacute;n</h4>
 				</aside>
 			</div>
-			<form action="" class="col-md-7 animDer">
+			<form  id="contactForm" class="col-md-7 animDer">
 				<div class="form-group">
 					<label for="email" class="control-label col-md-2 sr-only">Email*:</label>
 					<div class="col-md-10 mx-auto">
@@ -424,20 +424,22 @@
 					</div>				
 				</div>				
 				<div class="form-group">
-					<label for="telefono" class="control-label col-md-2 sr-only">Tel&eacute;fono::</label>
+					<label for="phone" class="control-label col-md-2 sr-only">Tel&eacute;fono::</label>
 					<div class="col-md-10 mx-auto">
-						<input id="telefono" type="text" class="form-control contacto" placeholder="Tel&eacute;fono" required>
+						<input id="phone" type="text" class="form-control contacto" placeholder="Tel&eacute;fono" required>
 					</div>				
 				</div>
 				<div class="form-group">
-					<label for="mensaje" class="control-label col-md-2 sr-only ">Mensaje:</label>
+					<label for="message" class="control-label col-md-2 sr-only ">Mensaje:</label>
 					<div class="col-md-10 mx-auto">
-						<textarea type="text" name="mensaje" id="mensaje"  placeholder="Mensaje" rows="5" class="form-control contacto"></textarea>
+						<textarea type="text" name="message" id="message"  placeholder="Mensaje" rows="5" class="form-control contacto" required></textarea>
 					</div>
 				</div>
 				<div class="form-group ">
+					<div id="success"></div>
 					<div class="col-3 col-sm-4 col-lg-3 mx-auto mx-sm-1 mx-lg-0 ml-sm-auto ml-lg-auto">
-						<button class="btn contacto contactoBtn">Enviar</button>		
+						
+						<button type="submit" id="sendMessageButton" class="btn contacto contactoBtn">Enviar</button>		
 					</div>
 				</div>
 			</form>
@@ -537,9 +539,11 @@
 <script src="js/jquery.min.js" charset="utf-8"></script>
 <script src="js/popper.min.js" charset="utf-8"></script>
 <script src="js/bootstrap.min.js" charset="utf-8"></script>
+<script src="js/jqBootstrapValidation.js" charset="utf-8"></script>
 <script src="js/scrollreveal.min.js" charset="utf-8"></script>
 <script src="js/propio.js" charset="utf-8"></script>
 <script src="js/qkconsent.js" data-cfasync="false"></script>
+<script src="js/devstar.js" charset="utf-8"></script>
 <script>
 window.addEventListener('load', function(){
   window.cookieconsent.initialise({
