--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
 	        <a class="nav-link barra collapseJQ" href="#contacto">Contacto</a>
 	      </li>
 	      <li class="nav-item togglerItem">
-	        <a class="nav-link barra collapseJQ" href="BlogERA.html">Blog</a>
+	        <a class="nav-link barra collapseJQ" href="Blog.html">Blog</a>
 	      </li>
 	      <li class="nav-item dropdown togglerItem">
 	        <a class="nav-link dropdown-toggle barra" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
