--- a/src/contactBlog.html
+++ b/src/contactBlog.html
@@ -110,6 +110,23 @@
               <p class="help-block text-danger"></p>
             </div>
           </div>
+          <div class="control-group">
+            <div class="form-group floating-label-form-group controls">
+              <label>Escribe el texto</label>
+              <div class="col-md-10 mx-auto">
+                <div id="captcha" class="row">
+                  <div class="col-md-6 ">
+                    <!-- sustituir por captcha -->
+                    <img src="/Img/a.jpg" alt="Sustituir por captcha" class=""> 
+                  </div>
+                  <div class="col-md-6 ">
+                    <input id="captcha" type="text" class="form-control contacto" placeholder="Escribe el Texto" required>
+                  </div>              
+                </div>
+              </div>
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
           <br>
           <div id="success"></div>
           <button type="submit" class="btn btn-primary" id="sendMessageButton">Enviar</button>
