--- a/src/index.html
+++ b/src/index.html
@@ -408,7 +408,7 @@
 </section>
 <section class="pt-4">
 	<div class="container contacto">		
-		<h3 class="titulo2 animTop">CUBRIMOS SUS NECESIDADES</h3>	
+		<h3 class="titulo2 animTop">CUBRIMOS SUS NECESIDADES</h3>
 		<div class="row justify-content-center py-4">			
 			<div class="col-md-4 pb-3 pb-sm-1 animIzq">				
 				<aside class="">
@@ -423,7 +423,7 @@
 					</div>				
 				</div>				
 				<div class="form-group">
-					<label for="telefono" class="control-label col-md-2 sr-only">Tel&eacute;fono::</label>
+					<label for="telefono" class="control-label col-md-2 sr-only">Tel&eacute;fono:</label>
 					<div class="col-md-10 mx-auto">
 						<input id="telefono" type="text" class="form-control contacto" placeholder="Tel&eacute;fono" required>
 					</div>				
@@ -432,6 +432,20 @@
 					<label for="mensaje" class="control-label col-md-2 sr-only ">Mensaje:</label>
 					<div class="col-md-10 mx-auto">
 						<textarea type="text" name="mensaje" id="mensaje"  placeholder="Mensaje" rows="5" class="form-control contacto"></textarea>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="captcha" class="control-label col-md-2 sr-only">Captcha:</label>
+					<div class="col-md-10 mx-auto">
+						<div id="captcha" class="row">
+							<div class="col-md-6 pb-1">
+								<!-- sustituir por captcha -->
+								<img src="/Img/a.jpg" alt="Sustituir por captcha" class="">	
+							</div>
+							<div class="col-md-6 ">
+								<input id="captcha" type="text" class="form-control contacto" placeholder="Escribe el Texto" required>
+							</div>							
+						</div>
 					</div>
 				</div>
 				<div class="form-group ">
