navbar mejorada, blog de marzo incompleto

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" href="css/main.css">
 
 </head> 
-<body>
+<body data-spy="scroll" data-target="#navbarSupportedContent">
 <header id="inicio" class="box1 header">
 	<nav id="barranav" class="navbar navbar-expand-lg fixed-top">
 	  <img src="/Img/logob.png" alt="logoBlanco" class="logoBlancoMenu mx-1"/>
@@ -32,9 +32,9 @@
 	  </button>
 
 	  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	    <ul class="navbar-nav mr-auto ">
-	      <li class="nav-item togglerItem">
-	        <a class="nav-link barra text-white barraLogo collapseJQ" href="#">Inicio</a>
+	    <ul class="navbar-nav ml-auto nav-pills">
+	      <li class="nav-item active togglerItem">
+	        <a class="nav-link barra  barraLogo collapseJQ" href="#inicio">Inicio</a>
 	      </li>
 	      <li class="nav-item togglerItem">
 	        <a class="nav-link barra collapseJQ" href="#soluciones">Soluciones</a>
@@ -94,6 +94,12 @@
 				<p class="titulo">SOLUCIONES EN INFORM&Aacute;TICA</p>
 			</div>	
 		</div>
+<!-- 		<div class="whats ">
+			<img src="Img/whats1.png" alt="" class="imgWhats">
+		</div> -->
+		<a href="https://api.whatsapp.com/send?phone=525563262446&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n." class="float1" target="_blank">
+		<i class="fa fa-whatsapp my-float"></i>
+		</a>
 		<!-- scroll down btn-->
 		<a href="#soluciones">
       		<div class="scroll-down"></div>
@@ -277,7 +283,7 @@
 			<div id="mantenimiento" class="col-md-5 justify-content-center animIzq">
 				<h3 class="titulo3 pb-2" align="center">MANTENIMIENTO</h3>
 				<ul class="">
-					<li>Desarrollo, mantenimiento y distribuci&oacute;n de software, Apps y sitis web.</li>
+					<li>Desarrollo, mantenimiento y distribuci&oacute;n de software, Apps y sitos web.</li>
 					<li>Arrendamiento, Mantenimiento y venta de equipo de c&oacute;mputo y redes.</li>					
 					<li>Administraci&oacute;n de bases de datos.</li>					
 					<li>An&aacute;lisis y optimizaci&oacute;n de procesos de TI.</li>
@@ -502,7 +508,7 @@
 							<i class="fa fa-phone"></i>
 						</div>
 						<div class="col-7 col-sm-10 plh">
-							<p class="mb-0">(52) 55 63262446</p>
+							<p class="mb-0"><a href="tel:+(52) 55 63262446" style="color: white;">5563262446</a></p>
 						</div>
 					</div>
 					<div class="row justify-content-center">
