--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<!-- descripcion -->
 	<meta name="description" content="Conócenos somos la mejor opción para tu empresa o negocio somos especialistas en desarrollo de software software, hardware, tecnología y computación. consúltanos antes de iniciar tru proyecto"/>
 	<meta name="author" content="Devstar Novatech">
@@ -222,10 +222,10 @@
 			</div>
 
 			<div class="col-md-4 col-lg-5 my-auto animIzq">
-			<div class="">
-				<h3>Ayud&aacute;ndole a encontrar las soluciones de TI adecuadas.</h3>
-				<p class="text-justify">Nuestro modelo “Flexible” de servicio se adapta a sus requerimientos ofreciendo la mejor relaci&oacute;n de calidad y precio, haciendo hincapi&eacute; en la competitividad t&eacute;cnica y econ&oacute;mica.</p>				
-			</div>		
+				<div class="">
+					<h3>Ayud&aacute;ndole a encontrar las soluciones de TI adecuadas.</h3>
+					<p class="text-justify">Nuestro modelo “Flexible” de servicio se adapta a sus requerimientos ofreciendo la mejor relaci&oacute;n de calidad y precio, haciendo hincapi&eacute; en la competitividad t&eacute;cnica y econ&oacute;mica.</p>				
+				</div>		
 			</div>
 		</div>
 
@@ -274,14 +274,10 @@
 				</p>				
 			</div>			
 		</div>
-<!-- 		<div class="row justify-content-center py-4 animIzq">
-			<div class="col-md-10 my-auto">
-				<img src="/Img/tech.png" alt="quien" class="rounded mx-auto d-block align-self-center img-fluid">				 
-			</div>			
-		</div> -->
+
 		<div class="row justify-content-center py-2 mt-2">
 			<div id="mantenimiento" class="col-md-5 justify-content-center animIzq">
-				<h3 class="titulo3 pb-2" align="center">MANTENIMIENTO</h3>
+				<h3 class="titulo3 pb-2 text-center" >MANTENIMIENTO</h3>
 				<ul class="">
 					<li>Desarrollo, mantenimiento y distribuci&oacute;n de software, Apps y sitos web.</li>
 					<li>Arrendamiento, Mantenimiento y venta de equipo de c&oacute;mputo y redes.</li>					
@@ -290,13 +286,13 @@
 					<li>Desarrollo y mantenimiento de Sistemas biom&eacute;tricos.</li>					
 				</ul>
 			</div>
-			<div id="consultoria" class="col-md-5 animIzq">
-				<img src="/Img/mante.jpg" alt="quien" class="rounded mx-auto d-block align-self-center img-fluid">		
+			<div class="col-md-5 animIzq">
+				<img src="/Img/mante.jpg" alt="mante.jpg" class="rounded mx-auto d-block align-self-center img-fluid">		
 			</div>
 		</div>
 		<div class="row justify-content-center py-2 mt-2">
 			<div id="consultoria" class="col-md-5 animDer">
-				<h3 class="titulo3 pb-2" align="center">CONSULTOR&Iacute;A</h3>
+				<h3 class="titulo3 pb-2 text-center">CONSULTOR&Iacute;A</h3>
 				<ul>				
 					<li>Adopci&oacute;n Tecnol&oacute;gica.</li>
 					<li>Consultor&iacute;a Estrat&eacute;gica.</li>
@@ -308,25 +304,10 @@
 					<li>Gesti&oacute;n de clientes (CRM)</li>
 				</ul>
 			</div>
-			<div id="consultoria" class="col-md-5 animDer">
-				<img src="/Img/consul.jpg" alt="quien" class="rounded mx-auto d-block align-self-center img-fluid">		
+			<div class="col-md-5 animDer">
+				<img src="/Img/consul.jpg" alt="consul.jpg" class="rounded mx-auto d-block align-self-center img-fluid">		
 			</div>						
 		</div>
-<!-- 		<div class="row justify-content-center py-2">			
-			<div class="col-md-5">
-				<h3 class="titulo3 pb-2" align="center">PRODUCTOS</h3>
-				<ul>
-					<li>Cloud computing.</li>
-					<li>Digitalizaci&oacute;n, preservaci&oacute;n y administraci&oacute;n de documentos y material hist&oacute;rico.</li>
-					<li>Ingenier&iacute;a inversa y miner&iacute;a de datos.</li>
-					<li>Monitoreo remoto de sistemas.</li>					
-					<li>Implementaciones de Realidad virtual, visi&oacute;n artificial, Inteligencia artificial, reconocimiento de patrones.</li>
-					<li>Servicios de streaming de contenido multimedia en la red.</li>
-
-					<li>Sistemas inteligentes.</li>
-				</ul>
-			</div>						
-		</div> -->
 		<div class="row justify-content-center py-4 animIzq">
 			<div class="col-md-10 my-auto noMostrarMenor768">
 				<img src="/Img/fondoSol2.png" alt="fondoSol2" class="rounded mx-auto d-block align-self-center img-fluid">				 
@@ -399,7 +380,8 @@
 				<h4 class="titulo3">TECNOLOG&Iacute;A</h4>
 				<p class="text-justify pt-4">					
 				Contamos con gran variedad de opciones en TI para resolver sus necesidades, nuestras soluciones se acomodan a todos los presupuestos, con nuestra asesor&iacute;a podr&aacute; definir cu&aacute;l es la mejor opci&oacute;n, en que &aacute;rea y secci&oacute;n es m&aacute;s viable para implementar una soluci&oacute;n para usted.
-				</p>				
+				</p>
+			</div>				
 		</div>
 
 	</div>
@@ -437,7 +419,7 @@
 				<div class="form-group">
 					<label for="mensaje" class="control-label col-md-2 sr-only ">Mensaje:</label>
 					<div class="col-md-10 mx-auto">
-						<textarea type="text" name="mensaje" id="mensaje"  placeholder="Mensaje" rows="5" class="form-control contacto"></textarea>
+						<textarea name="mensaje" id="mensaje"  placeholder="Mensaje" rows="5" class="form-control contacto"></textarea>
 					</div>
 				</div>
 				<div class="form-group">
@@ -446,10 +428,10 @@
 						<div id="captcha" class="row">
 							<div class="col-md-6 pb-1">
 								<!-- sustituir por captcha -->
-								<img src="/Img/a.jpg" alt="Sustituir por captcha" class="">	
+								<img src="/Img/a.jpg" alt="captcha.jpg" class="">	
 							</div>
 							<div class="col-md-6 ">
-								<input id="captcha" type="text" class="form-control contacto" placeholder="Escribe el Texto" required>
+								<input type="text" class="form-control contacto" placeholder="Escribe el Texto" required>
 							</div>							
 						</div>
 					</div>
@@ -508,7 +490,7 @@
 							<i class="fa fa-phone"></i>
 						</div>
 						<div class="col-7 col-sm-10 plh">
-							<p class="mb-0"><a href="tel:+(52) 55 63262446" style="color: white;">5563262446</a></p>
+							<p class="mb-0"><a href="tel:+(52)5563262446" style="color: white;">5563262446</a></p>
 						</div>
 					</div>
 					<div class="row justify-content-center">
@@ -553,10 +535,10 @@
 	<small><strong>Devstar Novatech 2021 </strong><i class="fa fa-copyright" aria-hidden="true"></i></small>
 </footer>
 
-<script src="js/jquery.min.js" charset="utf-8"></script>
-<script src="js/popper.min.js" charset="utf-8"></script>
-<script src="js/bootstrap.min.js" charset="utf-8"></script>
-<script src="js/scrollreveal.min.js" charset="utf-8"></script>
-<script src="js/propio.js" charset="utf-8"></script>
+<script src="js/jquery.min.js" ></script>
+<script src="js/popper.min.js" ></script>
+<script src="js/bootstrap.min.js" ></script>
+<script src="js/scrollreveal.min.js" ></script>
+<script src="js/propio.js" ></script>
 </body>
 </html>
