--- a/src/aboutBlog.html
+++ b/src/aboutBlog.html
@@ -46,10 +46,10 @@
             <a class="nav-link disabled" style="color: #cfcfcf;" href="aboutBlog.html">Acerca de</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Blog.html#publicaciones.html">Posts</a>
+            <a class="nav-link" href="blog.html#publicaciones">Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contactBlog.html">Contacto</a>
+            <a class="nav-link" href="contactblog.php">Contacto</a>
           </li>
         </ul>
       </div>
@@ -103,7 +103,7 @@
         <p class="text-justify">Contamos con gran variedad de opciones en TI para resolver sus necesidades, nuestras soluciones se acomodan a todos los presupuestos, con nuestra asesor&iacute;a podr&aacute; definir cu&aacute;l es la mejor opci&oacute;n, en que &aacute;rea y secci&oacute;n es m&aacute;s viable para implementar una soluci&oacute;n para usted.</p>
 
         <div class="">
-          <div class="d-flex justify-content-center"><a class="btn btn-outline-dark rounded h1" href="../contactBlog.html"><b>Contacto</b></a></div>
+          <div class="d-flex justify-content-center"><a class="btn btn-outline-dark rounded h1" href="../contactblog.php"><b>Contacto</b></a></div>
         </div>
       </div>
     </div>
