--- a/src/aboutBlog.html
+++ b/src/aboutBlog.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Devstar Novatech</a>
+      <a class="navbar-brand" href="index.php">Devstar Novatech</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Men&uacute;
         <i class="fa fa-bars"></i>
@@ -40,10 +40,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="Blog.html">Inicio</a>
+            <a class="nav-link" href="blog.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" style="color: #cfcfcf;" href="aboutBlog.html">Acerca de</a>
+            <a class="nav-link disabled" style="color: #cfcfcf;" href="aboutblog.html">Acerca de</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="blog.html#publicaciones">Posts</a>
@@ -118,7 +118,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="index.html">
+              <a href="index.php">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i> -->
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="index.html">
+              <a href="index.php">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i> -->
@@ -136,7 +136,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="index.html">
+              <a href="index.php">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i> -->
