--- a/src/blog2.html
+++ b/src/blog2.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Devstar Novatech</a>
+      <a class="navbar-brand" href="index.php">Devstar Novatech</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Men&uacute;
         <i class="fa fa-bars"></i>
@@ -43,7 +43,7 @@
             <a class="nav-link collapseJQ" href="blog.html">Inicio</a>
           </li>
           <li class="nav-item togglerItem">
-            <a class="nav-link collapseJQ" href="aboutBlog.html">Acerca de</a>
+            <a class="nav-link collapseJQ" href="aboutblog.html">Acerca de</a>
           </li>
           <li class="nav-item togglerItem">
             <a class="nav-link collapseJQ" href="#publicaciones">Posts</a>
@@ -162,21 +162,21 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="index.html">
+              <a href="index.php">
                 <span class="fa-stack fa-2x">
                   <i class="fa fa-facebook-official" aria-hidden="true"></i>
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="index.html">
+              <a href="index.php">
                 <span class="fa-stack fa-2x">
                   <i class="fa fa-twitter" aria-hidden="true"></i>
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="index.html">
+              <a href="index.php">
                 <span class="fa-stack fa-2x">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                 </span>
