SEO arreglado y bugs

--- a/src/aboutBlog.html
+++ b/src/aboutBlog.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Te contamos quiénes somos y nuestra trayectoria profesional, desarrollamos software a la medida y damos asesoría en el análisis de tu proyecto, ¡somos tu mejor aliado!">
+  <meta name="description" content="Te contamos quiénes somos y acerca de nuestra trayectoria. Ofrecemos análisis, desarrollo software, y más. ¡Conócenos!">
   <meta name="author" content="Devstar Novatech">
   <link rel="shortcut icon" href="img/postImg/logoBlog.ico">
 
-  <title>Devstar Novatech Blog - Acerca de</title>
+  <title>Acerca de | Devstar Novatech Blog</title>
 
   <!-- Bootstrap core CSS -->
   <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -34,7 +34,7 @@
     <div class="container">
       <a class="navbar-brand" href="index.html">Devstar Novatech</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Men&uacute;
+        Menú
         <i class="fa fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -75,32 +75,32 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <h2 class="section-heading">Qui&eacute;nes somos</h2>
+        <h2 class="section-heading">Quiénes somos</h2>
 
-        <p class="text-justify">Somos una empresa mexicana, que surge de la necesidad de mejorar los procesos por medio de tecnolog&iacute;a disruptiva, con el fin aumentar el desempe&ntilde;o, rendimiento y producci&oacute;n de las tareas diarias.</p>
+        <p class="text-justify">Somos una empresa mexicana, que surge de la necesidad de mejorar los procesos por medio de tecnología disruptiva, con el fin aumentar el desempeño, rendimiento y producción de las tareas diarias.</p>
 
-        <p class="text-justify">Nuestro equipo tiene m&aacute;s de 10 a&ntilde;os de experiencia tanto en gobierno como en empresas particulares, dando como resultado una compa&ntilde;&iacute;a focalizada en el desarrollo de soluciones de tecnolog&iacute;as, de metodolog&iacute;as y de alcance para satisfacer las necesidades en TI de cualquier cliente.</p>
+        <p class="text-justify">Nuestro equipo tiene más de 10 años de experiencia tanto en gobierno como en empresas particulares, dando como resultado una compañía focalizada en el desarrollo de soluciones de tecnologías, de metodologías y de alcance para satisfacer las necesidades en TI de cualquier cliente.</p>
 
-        <h2 class="section-heading">Visi&oacute;n</h2>
+        <h2 class="section-heading">Visión</h2>
 
-        <p class="text-justify">Ser reconocidos por nuestra contribuci&oacute;n a la sociedad facilitando el acceso a herramientas tecnol&oacute;gicas que aporten a la mejora y crecimiento de nuestros clientes.</p>
+        <p class="text-justify">Ser reconocidos por nuestra contribución a la sociedad facilitando el acceso a herramientas tecnológicas que aporten a la mejora y crecimiento de nuestros clientes.</p>
         
-        <h2 class="section-heading">Misi&oacute;n</h2>
+        <h2 class="section-heading">Misión</h2>
 
-        <p class="text-justify">Se basa en ofrecer soluciones de tecnolog&iacute;a que cumplan con las siguientes caracter&iacute;sticas:</p>
+        <p class="text-justify">Se basa en ofrecer soluciones de tecnología que cumplan con las siguientes características:</p>
 
         <p class="text-justify">
             <ul>
               <li class="text-justify">Robustas, estables y confiables.</li>
-              <li class="text-justify">F&aacute;ciles de implementar.</li>
-              <li class="text-justify">F&aacute;ciles de administrar.</li>
+              <li class="text-justify">Fáciles de implementar.</li>
+              <li class="text-justify">Fáciles de administrar.</li>
               <li class="text-justify">Intuitivas para los usuarios finales.</li>
             </ul>  
           </p>
 
-        <h2 class="section-heading">Tecnolog&iacute;a</h2>
+        <h2 class="section-heading">Tecnología</h2>
 
-        <p class="text-justify">Contamos con gran variedad de opciones en TI para resolver sus necesidades, nuestras soluciones se acomodan a todos los presupuestos, con nuestra asesor&iacute;a podr&aacute; definir cu&aacute;l es la mejor opci&oacute;n, en que &aacute;rea y secci&oacute;n es m&aacute;s viable para implementar una soluci&oacute;n para usted.</p>
+        <p class="text-justify">Contamos con gran variedad de opciones en TI para resolver sus necesidades, nuestras soluciones se acomodan a todos los presupuestos, con nuestra asesoría podrá definir cuál es la mejor opción, en que área y sección es más viable para implementar una solución para usted.</p>
 
         <div class="">
           <div class="d-flex justify-content-center"><a class="btn btn-outline-dark rounded h1" href="../contactBlog.html"><b>Contacto</b></a></div>
@@ -152,15 +152,12 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="js/jquery.min.js" charset="utf-8"></script>
-  <script src="js/popper.min.js" charset="utf-8"></script>
-  <script src="js/bootstrap.min.js" charset="utf-8"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <!-- Custom scripts for this template -->
   <script src="js/clean-blog.min.js"></script>
-  <script src="js/scrollreveal.min.js" charset="utf-8"></script>
-  <script src="js/propio.js" charset="utf-8"></script>
-
-
+  <script src="js/scrollreveal.min.js"></script>
 </body>
 
 </html>
