--- a/src/contactBlog.html
+++ b/src/contactBlog.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Formulario de Contacto de Devstar Novatech Blog mándanos un mensaje y damos soluciones ágiles en temas de computación e informática">
+  <meta name="description" content="Ponte en Contacto, mándanos un mensaje te ofrecemos soluciones ágiles en temas de computación e informática">
   <meta name="author" content="Devstar Novatech">
   <link rel="shortcut icon" href="img/postImg/logoBlog.ico">
 
-  <title>Devstar Novatech Blog - Contacto</title>
+  <title>Contacto | Devstar Novatech Blog</title>
 
   <!-- Bootstrap core CSS -->
   <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -34,7 +34,7 @@
     <div class="container">
       <a class="navbar-brand" href="index.html">Devstar Novatech</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Men&uacute;
+        Menú
         <i class="fa fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -64,7 +64,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>Contacto</h1>
-            <span class="subheading">En alg&uacute;n lugar algo incre&iacute;ble est&aacute; esperando ser descubierto</span>
+            <span class="subheading">En algún lugar algo increíble está esperando ser descubierto</span>
             <span class="caption text-muted">- Carl Sagan</span>
           </div>
         </div>
@@ -76,7 +76,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>¿Desea mas informaci&oacute;n sobre nuestros servicios? cont&aacute;ctenos y nos comunicaremos con usted.
+        <p>¿Desea mas información sobre nuestros servicios? contáctenos y nos comunicaremos con usted.
         </p>
         <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
         <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
@@ -98,8 +98,8 @@
           </div>
           <div class="control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label>N&uacute;mero Telef&oacute;nico</label>
-              <input type="tel" class="form-control" placeholder="N&uacute;mero Telef&oacute;nico" id="phone" required data-validation-required-message="Escriba su n&uacute;mero Telef&oacute;nico.">
+              <label>Número Telefónico</label>
+              <input type="tel" class="form-control" placeholder="Número Telefónico" id="phone" required data-validation-required-message="Escriba su número Telefónico.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
@@ -146,8 +146,6 @@
             <li class="list-inline-item">
               <a href="index.html">
                 <span class="fa-stack fa-2x">
-                  <!-- <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i> -->
                   <i class="fa fa-facebook-official" aria-hidden="true"></i>
                 </span>
               </a>
@@ -155,8 +153,6 @@
             <li class="list-inline-item">
               <a href="index.html">
                 <span class="fa-stack fa-2x">
-                  <!-- <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i> -->
                   <i class="fa fa-twitter" aria-hidden="true"></i>
                 </span>
               </a>
@@ -164,8 +160,6 @@
             <li class="list-inline-item">
               <a href="index.html">
                 <span class="fa-stack fa-2x">
-                  <!-- <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i> -->
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                 </span>
               </a>
@@ -178,12 +172,12 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="js/jquery.min.js" charset="utf-8"></script>
-  <script src="js/popper.min.js" charset="utf-8"></script>
-  <script src="js/bootstrap.min.js" charset="utf-8"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <!-- Custom scripts for this template -->
   <script src="js/clean-blog.min.js"></script>
-  <script src="js/scrollreveal.min.js" charset="utf-8"></script>
+  <script src="js/scrollreveal.min.js"></script>
 
 </body>
 
