SEO arreglado y bugs

--- a/src/contactBlog.html
+++ b/src/contactBlog.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Ponte en Contacto, mándanos un mensaje te ofrecemos soluciones ágiles en temas de computación e informática">
   <meta name="author" content="Devstar Novatech">
-  <link rel="shortcut icon" href="img/postImg/logoBlog.ico">
+  <link rel="shortcut icon" href="img/postimg/logoBlog.ico">
 
   <title>Contacto | Devstar Novatech Blog</title>
 
@@ -57,7 +57,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/postImg/espacio.jpg')">
+  <header class="masthead" style="background-image: url('img/postimg/espacio.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -117,7 +117,9 @@
                 <div id="captcha" class="row">
                   <div class="col-md-6 ">
                     <!-- sustituir por captcha -->
-                    <img src="/Img/a.jpg" alt="Sustituir por captcha" class=""> 
+                    <img src="img/a.png" alt="a.png" class="img-fluid ocultarGrande">
+                    <!-- vista menores 768px -->
+                    <img src="img/a.png" alt="a.webp" class="img-fluid noMostrarMenor576 noMostrar577767">
                   </div>
                   <div class="col-md-6 ">
                     <input id="captcha" type="text" class="form-control contacto" placeholder="Escribe el Texto" required>
