--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
 <body data-spy="scroll" data-target="#navbarSupportedContent" onresize="FuntionResize()">
 <header id="inicio" class="box1 header">
 	<nav id="barranav" class="navbar navbar-expand-lg fixed-top">
-	  <img src="/Img/logob.png" alt="logoBlanco" class="logoBlancoMenu mx-1"/>
-	  <!-- <img src="/Img/logoBN.png" alt="logoBlanco" class="logoBlancoMenu mx-1"> -->
+	  <img src="img/logob.png" alt="logoBlanco" class="logoBlancoMenu mx-1"/>
+	  <!-- <img src="img/logoBN.png" alt="logoBlanco" class="logoBlancoMenu mx-1"> -->
 	  <a class="navbar-brand text-white barraLogo noMostrarMenor400" href="#inicio">DEVSTAR NOVATECH</a>
 	  <!-- <h1 class="navbar-brand text-white barraLogo" href="#">DEVSTAR NOVATECH</h1> -->
 	  <button class="navbar-toggler togglerA" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +72,7 @@
 		<div class="row justify-content-center align-items-center h-100 relativo" >
 			<!-- easter egg -->
 			<div class="fondoTitulo rounded col-md-6 col-lg-5 col-xl-4 absoluto">
-				<img src="Img/Jomi.webp" alt="jomi.webp" class="img-fluid" style="display: none;">
+				<img src="img/Jomi.webp" alt="jomi.webp" class="img-fluid" style="display: none;">
 			</div>
 			<!-- visible mas 1024px -->
 			<div id="tituloSoluciones" class="fondoTitulo rounded col-md-6 col-lg-5 col-xl-4 absoluto">
@@ -95,7 +95,7 @@
 		<div class="row justify-content-center pt-4 ">
 			<div class="col-md-3 ">
 				<div class="ocultarGrande card solucionesInfo py-2">
-					<img src="/Img/img_trans.gif" alt="aplicaciones.png" class="card-img-top mx-auto d-block align-self-center aplicaciones">
+					<img src="img/img_trans.gif" alt="aplicaciones.png" class="card-img-top mx-auto d-block align-self-center aplicaciones">
 					<div class="card-body border-white border-bottom mt-md-4">
 						<div class="d-flex justify-content-center">
 							<h3 class="titulo5">APLICACIONES</h3>			
@@ -107,7 +107,7 @@
 					</div>
 				</div>
 				<div class="noMostrarMenor576 noMostrar577767 card solucionesInfo pb-2 animIzq">	
-					<img src="/Img/img_trans.gif" alt="aplicaciones.png" class="card-img-top mx-auto d-block align-self-center aplicaciones">
+					<img src="img/img_trans.gif" alt="aplicaciones.png" class="card-img-top mx-auto d-block align-self-center aplicaciones">
 					<div class="card-body border-white border-top mt-4">
 						<div class="d-flex justify-content-center">
 							<h3 class="titulo5">APLICACIONES</h3>							
@@ -118,7 +118,7 @@
 			</div>
 			<div class="col-md-3">
 				<div class="ocultarGrande card solucionesInfo py-2">
-					<img src="/Img/img_trans.gif" alt="img_trans.gif" class="card-img-top mx-auto d-block align-self-center mantenimiento">
+					<img src="img/img_trans.gif" alt="img_trans.gif" class="card-img-top mx-auto d-block align-self-center mantenimiento">
 					<div class="card-body border-white border-bottom borderChicoNone mt-md-4">
 						<div class="d-flex justify-content-center">
 							<h3 class="titulo5">MANTENIMIENTO</h3>							
@@ -130,7 +130,7 @@
 					</div>
 				</div>
 				<div class="noMostrarMenor576 noMostrar577767 card solucionesInfo pb-2 animTop">
-					<img src="/Img/img_trans.gif" alt="mantenimiento.png" class="card-img-top mx-auto d-block align-self-center mantenimiento">
+					<img src="img/img_trans.gif" alt="mantenimiento.png" class="card-img-top mx-auto d-block align-self-center mantenimiento">
 					<div class="card-body border-white border-top mt-4">
 						<div class="d-flex justify-content-center">
 							<h3 class="titulo5">MANTENIMIENTO</h3>							
@@ -141,7 +141,7 @@
 			</div>
 			<div class="col-md-3">
 				<div class="ocultarGrande card solucionesInfo justify-content-center py-2">
-					<img src="/Img/img_trans.gif" alt="consultoria.png" class="card-img-top mx-auto d-block align-self-center consultoria">
+					<img src="img/img_trans.gif" alt="consultoria.png" class="card-img-top mx-auto d-block align-self-center consultoria">
 					<div class="card-body mt-md-4">
 						<div class="d-flex justify-content-center">
 							<h3 class="titulo5">CONSULTORÍA</h3>
@@ -153,7 +153,7 @@
 					</div>
 				</div>
 				<div class="noMostrarMenor576 noMostrar577767 card solucionesInfo justify-content-center pb-2 animDer">
-					<img src="/Img/img_trans.gif" alt="consultoria.png" class="card-img-top mx-auto d-block align-self-center consultoria">
+					<img src="img/img_trans.gif" alt="consultoria.png" class="card-img-top mx-auto d-block align-self-center consultoria">
 					<div class="card-body border-white border-top mt-4">
 						<div class="d-flex justify-content-center">
 							<h3 class="titulo5">CONSULTORÍA</h3>
@@ -199,7 +199,7 @@
 
 			<div class="col-md-4 col-lg-3 py-3 py-sm-0 my-md-auto animIzq">
 				<div class="d-flex justify-content-center">
-    				<img src="/Img/devAnt.png" alt="logoDevAnt" class="logoDevAnt img-fluid">
+    				<img src="img/devAnt.png" alt="logoDevAnt" class="logoDevAnt img-fluid">
 				</div>
 			</div>
 
@@ -225,7 +225,7 @@
 		<h3 class="titulo2 animTop">ALIADO DE "TI" CON VISIÓN COMPARTIDA</h3>
 		<div class="row justify-content-center pt-4 pb-2 mt-2">			
 			<div class="col-md-3 my-auto animIzq">
-				<img src="/Img/img_trans.gif" alt="img_trans.gif" class="mx-auto d-block align-self-center appWeb">				 
+				<img src="img/img_trans.gif" alt="img_trans.gif" class="mx-auto d-block align-self-center appWeb">				 
 			</div>
 			<div class="col-md-7 animDer">
 				<h4 class="titulo4">APLICACIONES WEB</h4>
@@ -236,7 +236,7 @@
 		</div>
 		<div class="row justify-content-center py-2">
 			<div class="col-md-3 my-auto animIzq">
-				<img src="/Img/img_trans.gif" alt="quien" class="mx-auto d-block align-self-center appMov ">				 
+				<img src="img/img_trans.gif" alt="quien" class="mx-auto d-block align-self-center appMov ">				 
 			</div>
 			<div class="col-md-7 animDer">
 				<h4 class="titulo4">APLICACIONES MÓVILES</h4>
@@ -247,7 +247,7 @@
 		</div>
 		<div class="row justify-content-center py-2 mb-2">
 			<div class="col-md-3 my-auto animIzq">
-				<img src="/Img/img_trans.gif" alt="quien" class="mx-auto d-block align-self-center webSite ">				 
+				<img src="img/img_trans.gif" alt="quien" class="mx-auto d-block align-self-center webSite ">				 
 			</div>
 			<div class="col-md-7 animDer">
 				<h4 class="titulo4">SITIOS WEB</h4>
@@ -269,7 +269,7 @@
 				</ul>
 			</div>
 			<div class="col-md-5 animIzq d-flex align-items-center">
-				<img src="/Img/informática.jpg" alt="informática.jpg" class="rounded mx-auto d-block align-self-center  img-fluid">	
+				<img src="img/informática.jpg" alt="informática.jpg" class="rounded mx-auto d-block align-self-center  img-fluid">	
 			</div>
 		</div>
 		<div class="row justify-content-center py-2 mt-2">
@@ -287,12 +287,12 @@
 				</ul>
 			</div>
 			<div class="col-md-5 animDer d-flex align-items-center">
-				<img src="/Img/consulSm.jpg" alt="consulSm.jpg" class="rounded mx-auto d-block align-self-center img-fluid">		
+				<img src="img/consulSm.jpg" alt="consulSm.jpg" class="rounded mx-auto d-block align-self-center img-fluid">		
 			</div>						
 		</div>
 		<div class="row justify-content-center py-4 animIzq">
 			<div class="col-md-10 my-auto noMostrarMenor768">
-				<img src="/Img/soluciones.png" alt="soluciones.png" class="rounded mx-auto d-block align-self-center img-fluid">				 
+				<img src="img/soluciones.png" alt="soluciones.png" class="rounded mx-auto d-block align-self-center img-fluid">				 
 			</div>			
 		</div>
 		<div class="row justify-content-center py-4 animBo2">			
@@ -314,7 +314,7 @@
 		<h3 class="titulo2 animTop">MEET DEVSTAR</h3>
 		<div class="row justify-content-center py-4 animIzq">			
 			<div class="col-md-3 my-auto">
-				<img src="/Img/img_trans.gif" alt="quien" class="mx-auto d-block align-self-center quienSomos ">				 
+				<img src="img/img_trans.gif" alt="quien" class="mx-auto d-block align-self-center quienSomos ">				 
 			</div>
 			<div class="col-md-7">
 				<h4 class="titulo3">¿QUIÉNES SOMOS?</h4>
@@ -328,7 +328,7 @@
 		</div>
 		<div class="row justify-content-center py-4 animIzq">			
 			<div class="col-md-3 my-auto">
-				<img src="/Img/img_trans.gif" alt="vision" class="mx-auto d-block align-self-center vision ">				 
+				<img src="img/img_trans.gif" alt="vision" class="mx-auto d-block align-self-center vision ">				 
 			</div>
 			<div class="col-md-7">
 				<h4 class="titulo3">VISIÓN</h4>
@@ -339,7 +339,7 @@
 		</div>
 		<div class="row justify-content-center py-4 animIzq">			
 			<div class="col-md-3 my-auto">
-				<img src="/Img/img_trans.gif" alt="quien" class="mx-auto d-block align-self-center mision">				 
+				<img src="img/img_trans.gif" alt="quien" class="mx-auto d-block align-self-center mision">				 
 			</div>
 			<div class="col-md-7">
 				<h4 class="titulo3">MISIÓN</h4>
@@ -356,7 +356,7 @@
 		</div>
 		<div class="row justify-content-center py-4 animIzq">			
 			<div class="col-md-3 my-auto">
-				<img src="/Img/img_trans.gif" alt="quien" class="mx-auto d-block align-self-center tecnologia">				 
+				<img src="img/img_trans.gif" alt="quien" class="mx-auto d-block align-self-center tecnologia">				 
 			</div>
 			<div class="col-md-7">
 				<h4 class="titulo3">TECNOLOGÍA</h4>
@@ -411,9 +411,9 @@
 							<div class="col-md-6 pb-1">
 								<!-- sustituir por captcha -->
 									<!-- vista mayores 768px -->
-								<img src="/Img/a.png" alt="a.webp" class="img-fluid ocultarGrande">
+								<img src="img/a.png" alt="a.webp" class="img-fluid ocultarGrande">
 									<!-- vista menores 768px -->
-								<img src="/Img/a.png" alt="a.webp" class="img-fluid noMostrarMenor576 noMostrar577767">
+								<img src="img/a.png" alt="a.webp" class="img-fluid noMostrarMenor576 noMostrar577767">
 							</div>
 							<div class="col-md-6 ">
 								<input type="text" class="form-control contacto" placeholder="Escribe el Texto" required>
@@ -438,7 +438,7 @@
 				<div class="finalInfo finalInfo1st">					
 					<div class="row justify-content-center pt-2">
 						<div class="col-4 col-md-4 py-2 py-md-0 mt-lg-2 my-auto">
-							<img src="/Img/logob.png" alt="logoBlanco" class="logoFinBlanco">
+							<img src="img/logob.png" alt="logoBlanco" class="logoFinBlanco">
 						</div>
 						<div class="col-7 col-md-8 mt-md-2 px-0 my-auto my-lg-0">
 							<h2 class="titulo4F pt-2">DEVSTAR NOVATECH</h2>
@@ -500,13 +500,13 @@
 				<div class="finalInfo pt-2">					
 					<p class="h3 titulo5">REDES SOCIALES</p>
 					<div class="portCh">
-						<a href="#" class="btn btn-white">
+						<a href="#inicio" class="btn btn-white">
 							<i class="fa fa-twitter iconFinalRedes"></i>
 						</a>
-						<a href="" class="btn btn-white">
+						<a href="#inicio" class="btn btn-white">
 							<i class="fa fa-facebook iconFinalRedes"></i>
 						</a>
-						<a href="" class="btn btn-white">
+						<a href="#inicio" class="btn btn-white">
 							<i class="fa fa-google-plus iconFinalRedes"></i>
 						</a>
 					</div>
