--- a/src/contactBlog.html
+++ b/src/contactBlog.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Ponte en Contacto, mándanos un mensaje te ofrecemos soluciones ágiles en temas de computación e informática">
   <meta name="author" content="Devstar Novatech">
-  <link rel="shortcut icon" href="img/postimg/logoBlog.ico">
+  <link rel="shortcut icon" href="img/postImg/logoBlog.ico">
 
   <title>Contacto | Devstar Novatech Blog</title>
 
@@ -57,7 +57,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/postimg/espacio.jpg')">
+  <header class="masthead" style="background-image: url('img/postImg/espacio.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
