--- a/src/aboutBlog.html
+++ b/src/aboutBlog.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Te contamos quiénes somos y acerca de nuestra trayectoria. Ofrecemos análisis, desarrollo software, y más. ¡Conócenos!">
   <meta name="author" content="Devstar Novatech">
-  <link rel="shortcut icon" href="img/postImg/logoBlog.ico">
+  <link rel="shortcut icon" href="Img/postImg/logoBlog.ico">
 
   <title>Acerca de | Devstar Novatech Blog</title>
 
@@ -25,6 +25,14 @@
   <link href="css/clean-blog.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/slider.min.css">
   <link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/qkconsent.css" />
+  <script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+  
+		gtag('config', 'UA-142838512-1');
+	  </script>
 </head>
 
 <body>
@@ -32,7 +40,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Devstar Novatech</a>
+      <a class="navbar-brand" href="http://devstar-novatech.com">Devstar Novatech</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menú
         <i class="fa fa-bars"></i>
@@ -46,10 +54,10 @@
             <a class="nav-link disabled" style="color: #cfcfcf;" href="aboutBlog.html">Acerca de</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Blog.html#publicaciones.html">Posts</a>
+            <a class="nav-link" href="blog.html#publicaciones.html">Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contactBlog.html">Contacto</a>
+            <a class="nav-link" href="contactBlog.php">Contacto</a>
           </li>
         </ul>
       </div>
@@ -57,7 +65,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/postImg/supernova.jpg')">
+  <header class="masthead" style="background-image: url('Img/postImg/supernova.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -103,7 +111,7 @@
         <p class="text-justify">Contamos con gran variedad de opciones en TI para resolver sus necesidades, nuestras soluciones se acomodan a todos los presupuestos, con nuestra asesoría podrá definir cuál es la mejor opción, en que área y sección es más viable para implementar una solución para usted.</p>
 
         <div class="">
-          <div class="d-flex justify-content-center"><a class="btn btn-outline-dark rounded h1" href="../contactBlog.html"><b>Contacto</b></a></div>
+          <div class="d-flex justify-content-center"><a class="btn btn-outline-dark rounded h1" href="../contactBlog.php"><b>Contacto</b></a></div>
         </div>
       </div>
     </div>
@@ -118,7 +126,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="index.html">
+              <a href="http://devstar-novatech.com">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i> -->
@@ -127,7 +135,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="index.html">
+              <a href="http://devstar-novatech.com">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i> -->
@@ -136,7 +144,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="index.html">
+              <a href="http://devstar-novatech.com">
                 <span class="fa-stack fa-2x">
                   <!-- <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i> -->
@@ -158,6 +166,56 @@
   <!-- Custom scripts for this template -->
   <script src="js/clean-blog.min.js"></script>
   <script src="js/scrollreveal.min.js"></script>
+<script src="js/qkconsent.js" data-cfasync="false"></script>
+  <script>
+  window.addEventListener('load', function(){
+    window.cookieconsent.initialise({
+     revokeBtn: "<div class='cc-revoke'></div>",
+     type: "opt-in",
+     theme: "classic",
+     palette: {
+         popup: {
+             background: "rgb(28 44 23 / 90%)",
+             text: "#fff"
+          },
+         button: {
+             background: "#CAD160",
+             text: "#000"
+          }
+      },
+     content: {
+         message: "Utilizamos cookies para mejorar la experiencia de los usuarios y para analizar "+
+         "la concurrencia al sitio web. Por estas razones, es posible que compartamos los datos que ha"+
+         " proporcionado con nuestros socios de analíticas web. Al hacer clic en \"Acepto cookies\","+
+         " usted autoriza el almacenamiento de todas las tecnologías descriptas en nuestra Política de"+
+         " cookies en su dispositivo.",
+         link: "politicas",
+         allow: "Acepto cookies",
+         deny: "Rechazar",
+         href: "mrvcookie.com/cookies"
+      },
+      onInitialise: function(status) {
+        if(status == cookieconsent.status.allow) myScripts();
+      },
+      onStatusChange: function(status) {
+        if (this.hasConsented()) myScripts();
+      }
+    })
+  });
+  
+  function myScripts() {
+  
+     // Paste here your scripts that use cookies requiring consent. See examples below
+  
+     // Google Analytics, you need to change 'UA-00000000-1' to your ID
+        (function(wdw,doc,tag,url,ja,a,m){
+        a=doc.createElement(tag),m=doc.getElementsByTagName(tag)[0];
+        a.async=1;
+        a.src=url;
+        m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.googletagmanager.com/gtag/js?id=UA-142838512-1','gtag');
+  }
+  </script>
 </body>
 
 </html>
