--- a/src/aboutBlog.html
+++ b/src/aboutBlog.html
@@ -48,13 +48,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="blog.html">Inicio</a>
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" style="color: #cfcfcf;" href="aboutBlog.html">Acerca de</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.html#publicaciones.html">Posts</a>
+            <a class="nav-link" href="index.html#publicaciones.html">Posts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contactBlog.php">Contacto</a>
